@@ -12,11 +12,16 @@ BUGFIXES:
   ZOOKEEPER-772. zkpython segfaults when watcher from async get children 
   is invoked. (henry robinson via mahadev)
 
-  ZOOKEEPER-795. eventThread isn't shutdown after a connection "session expired" event coming (sergey doroshenko via breed)
+  ZOOKEEPER-795. eventThread isn't shutdown after a connection
+  "session expired" event coming (sergey doroshenko via breed)
 
   ZOOKEEPER-792. zkpython memory leak (Lei Zhang via henryr)
 
-  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a server.0 line (phunt and Andrei Savu via breed)
+  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
+  server.0 line (phunt and Andrei Savu via breed)
+
+  ZOOKEEPER-785. Zookeeper 3.3.1 shouldn't infinite loop if someone creates a
+  server.0 line (part 2) (phunt)
 
 IMPROVEMENTS:
 
